Implement more reliable install logic
This uses both a background task that publishes package events,
and an activity with request codes (without NEW_TASK). This
appears to give the correct results in all conditions.

Fix: https://github.com/AULFA/updater/issues/4

--- a/au.org.libraryforall.updater.app/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.updater.app/src/main/res/values/strings.xml
@@ -118,4 +118,5 @@ Add repositories using the action bar menu!</string>
   <string name="failure_wrote_failed">Failed to save report: %1$s (%2$s)</string>
   <string name="install_downloading">Downloading (%1$.2fM / %2$.2fM:  %3$.2fM/s)</string>
   <string name="install_downloading_indefinite">Downloading (%1$.2fM: %3.2fM/s)</string>
+  <string name="install_apk_cancelled">APK installation was cancelled</string>
 </resources>
