Implement operation cancellation.
This allows for cancelling verification and downloads.

Fix: https://github.com/AULFA/updater/issues/1

--- a/au.org.libraryforall.updater.app/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.updater.app/src/main/res/values/strings.xml
@@ -119,4 +119,6 @@ Add repositories using the action bar menu!</string>
   <string name="install_downloading">Downloading (%1$.2fM / %2$.2fM:  %3$.2fM/s)</string>
   <string name="install_downloading_indefinite">Downloading (%1$.2fM: %3.2fM/s)</string>
   <string name="install_apk_cancelled">APK installation was cancelled</string>
+  <string name="install_verify_cancelled">Verification cancelled</string>
+  <string name="install_downloading_cancelled">Download cancelled</string>
 </resources>
