Add bundled repositories
This adds three repository definitions that are automatically added each
time the app starts up (assuming that they do not already exist):

  1. The builds.lfa.one releases repository
  2. The builds.lfa.one outdated releases repository
  3. The hotspot mirror

The outdated repository allows for demonstrating upgrade functionality:
It contains a reference to an old version of the online app and this
can be upgraded by selecting a modern version from the up-to-date
releases repository.

--- a/au.org.libraryforall.updater.app/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.updater.app/src/main/res/values/strings.xml
@@ -121,4 +121,16 @@ Add repositories using the action bar menu!</string>
   <string name="install_apk_cancelled">APK installation was cancelled</string>
   <string name="install_verify_cancelled">Verification cancelled</string>
   <string name="install_downloading_cancelled">Download cancelled</string>
+
+  <string name="inventory_required_uuid_checking">Checking that repository has required UUID…</string>
+  <string name="inventory_required_uuid_checking_failed">Repository has incorrect UUID.\n
+\n
+Required: %1$s\n
+Received: %2$s
+  </string>
+  <string name="inventory_required_uuid_checking_succeeded">Repository has correct UUID.\n
+\n
+Required: %1$s\n
+Received: %2$s
+  </string>
 </resources>
