Add the ability to delete cached data
This adds an option in the main repositories menu to delete cached
data.

Affects: https://github.com/AULFA/updater/issues/8

--- a/au.org.libraryforall.updater.app/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.updater.app/src/main/res/values/strings.xml
@@ -133,4 +133,10 @@ Received: %2$s
 Required: %1$s\n
 Received: %2$s
   </string>
+  <string name="inventory_menu_delete_cached_data">Delete cached data…</string>
+  <string name="delete_cached_confirm_title">Delete cached data?</string>
+  <string name="delete_cached_confirm">Are you sure you want to delete all cached data?</string>
+  <string name="delete_cached">Delete</string>
+  <string name="deleted_cached_title">Deletion completed</string>
+  <string name="deleted_cached">Deleted %1$d files totalling %2$.2fM of data</string>
 </resources>
