Add the ability to open the overview
This adds an optional parameter to the main activity that allows
for opening the overview. It also adds a hidden developer settings
section that allows for testing the feature easily.

Affects: https://github.com/AULFA/updater/issues/11

--- a/au.org.libraryforall.updater.app/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.updater.app/src/main/res/values/strings.xml
@@ -141,4 +141,8 @@ Received: %2$s
   <string name="deleted_cached_title">Deletion completed</string>
   <string name="deleted_cached">Deleted %1$d files totalling %2$.2fM of data</string>
   <string name="overview">Updates Overview</string>
+
+  <!-- Developer settings strings -->
+  <string name="devTargetOverview">Launch Overview Activity</string>
+  <string name="devSettingsTitle">Developer Settings</string>
 </resources>
