Initial task refactoring
This performs the initial refactoring of the application in order
to make it possible to extend the code to support downloading and
installing OPDS packages.

The existing task monad types were replaced with a more principled
type, and the tasks themselves were replaced with implementations
that aggressively retry operations in the case of failures.

Additionally, a service directory type was introduced in order to
reduce coupling between application components.

--- a/au.org.libraryforall.updater.app/src/main/res/values/strings.xml
+++ b/au.org.libraryforall.updater.app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@ File: %1$s</string>
 Expected: %1$s\n
 Received: %2$s</string>
   <string name="install_download_needed_exception">An exception occurred whilst trying to verify local data: %1$s (%2$s). Downloading is required.</string>
+  <string name="install_verifying_status">Verifying (%1$.2fM / %2$.2fM @ %3$.2fM/s)</string>
   <string name="install_verifying">Verifying (%1$.2fM / %2$.2fM)</string>
   <string name="install_verified_file">Attempted to verify local file.\n
 \n
@@ -148,4 +149,6 @@ Received: %2$s
   <!-- Developer settings strings -->
   <string name="devTargetOverview">Launch Overview Activity</string>
   <string name="devSettingsTitle">Developer Settings</string>
+  <string name="downloadingHTTPServerError">Server returned an error: %1$d %2$s (%3$s, %4$d)</string>
+  <string name="installReservingFile">Reserving a file...</string>
 </resources>
